fixed nav menu on small screens

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -22,7 +22,7 @@
     display:flex;
     position: absolute;
     flex-direction: column;
-    top: 15%;
+    top: 10%;
     background-color: white;
     left: 0;
     /* width: 30%; */
